--- a/patrolLibrary/src/main/AndroidManifest.xml
+++ b/patrolLibrary/src/main/AndroidManifest.xml
@@ -51,7 +51,9 @@
         <activity android:name=".ui.target_device.PatrolDeviceAddDangerActivity" />
         <activity android:name=".ui.target_project.PatrolTargetProjectActivity" />
         <activity android:name=".ui.target_project.PatrolProjectAddDangerActivity" />
-        <activity android:name=".ui.history.PatrolHistoryActivity"></activity>
+        <activity android:name=".ui.history.PatrolHistoryActivity" />
+        <activity android:name=".ui.history_info.PatrolHistoryInfoProjectActivity" />
+        <activity android:name=".ui.history_info.PatrolHistoryInfoDeviceActivity"></activity>
     </application>
 
 </manifest>
