--- a/patrolLibrary/src/main/AndroidManifest.xml
+++ b/patrolLibrary/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         <activity android:name=".ui.target_project.PatrolProjectAddDangerActivity" />
         <activity android:name=".ui.history.PatrolHistoryActivity" />
         <activity android:name=".ui.history_info.PatrolHistoryInfoProjectActivity" />
-        <activity android:name=".ui.history_info.PatrolHistoryInfoDeviceActivity"></activity>
+        <activity android:name=".ui.history_info.PatrolHistoryInfoDeviceActivity" />
+        <activity android:name=".ui.danger_handle.PatrolDangerListActivity"></activity>
     </application>
 
 </manifest>
