--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.github.HyfSunshine:SDRLibrary:1.0.1-beta'
+    implementation 'com.github.HyfSunshine:SDRLibrary:1.0.2'
     implementation project(':patrolLibrary')
 
     // other
