--- a/patrolLibrary/build.gradle
+++ b/patrolLibrary/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     // base
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.github.HyfSunshine:SDRLibrary:1.0.1-beta'
+    implementation 'com.github.HyfSunshine:SDRLibrary:1.0.2'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
 
     // must
