--- a/patrolLibrary/src/main/AndroidManifest.xml
+++ b/patrolLibrary/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
         <activity android:name=".ui.history_info.PatrolHistoryInfoProjectActivity" />
         <activity android:name=".ui.history_info.PatrolHistoryInfoDeviceActivity" />
         <activity android:name=".ui.danger_handle.PatrolDangerListActivity" />
-        <activity android:name=".ui.danger_handle.PatrolDangerSolveActivity"></activity>
+        <activity android:name=".ui.danger_handle.PatrolDangerSolveActivity" />
+        <activity android:name=".ui.danger_handle.handle.PatrolDangerCheckHandleActivity"></activity>
     </application>
 
 </manifest>
